# Emergence

./: .gitattributes  .gitignore  404.html  Cargo.toml  README.md  cascade-hacks.patch  deny.toml  dimension-discussion.md  flake.nix  glossary.html  print.html  risk-assessment.html  searchindex.js  searchindex.json  steam-page.html  water.html
asm-game/: Cargo.toml
asm-game/src/: main.rs
asm-lib/: Cargo.toml
asm-lib/src/: config.rs  diagnostics.rs  entity_map.rs  generation.rs  graphics.rs  id.rs  initialization.rs  lib.rs  organisms.rs  pheromones.rs  position.rs  signals.rs  structures.rs  terrain.rs  ui.rs  units.rs  utils.rs
emergence-lib/: Cargo.toml
emergence-lib/src/: generation.rs  graphics.rs  organisms.rs  pheromones.rs  tilemap.rs  ui.rs  units.rs
emergence_game/: Cargo.toml
emergence_game/assets/: CREDITS.md  tile-plant
emergence_game/assets/litter/: partial.blend  partial.gltf  pile.blend  pile.gltf
emergence_game/assets/manifests/: base_game.item_manifest.json  base_game.recipe_manifest.json  base_game.structure_manifest.json  base_game.terrain_manifest.json  base_game.unit_manifest.json  items.manifest.json  recipes.manifest.json  terrain.manifest.json
emergence_game/assets/organisms/: 3D_Ant.gltf  mushroom.gltf  plant.gltf
emergence_game/assets/structures/: acacia.blend  acacia.gltf  acacia_seed.gltf  acacia_seedling.blend  acacia_seedling.gltf  acacia_sprout.blend  acacia_sprout.gltf  ant_hive.blend  ant_hive.blend1  ant_hive.gltf  bridge.blend  bridge.gltf  chute.blend  chute.gltf  hatchery.blend  hatchery.gltf  leuco.blend  leuco.gltf  mushroom.blend1  net.blend  net.gltf  path.blend  path.gltf  spring.blend  spring.gltf  storage.blend  storage.gltf  tide_weed.blend  tide_weed.gltf
emergence_game/assets/terrain/: base_terrain_topper.blend  base_terrain_topper.gltf  grassy.blend  grassy.gltf  loam.blend  loam.gltf  muddy.blend  muddy.gltf  rocky.blend  rocky.gltf  swampy.blend  swampy.gltf
emergence_game/assets/units/: 3D_Ant.gltf  BasketCrab_Proxy.blend  BasketCrab_Proxy.gltf  Crab_Proxy.gltf  ant.blend  ant.gltf  basket_crab.blend  basket_crab.gltf  basket_crab_no_basket.gltf  basket_crab_rig.blend  basket_crab_start_and_stop.blend  basket_crab_step_down.blend  basket_crab_step_up.blend  basket_crab_toss_in.blend  basket_crab_toss_in.gltf  basket_crab_toss_out.blend  basket_crab_toss_out.gltf  basket_crab_turn.blend  basket_crab_turn_90deg.gltf  basket_crab_walk.blend  basket_crab_walk.gltf  basket_crab_walk_start.gltf  basket_crab_walk_stop.gltf  salt_shell.blend  salt_shell.gltf  tide_slug.blend  tide_slug.gltf
emergence_game/examples/: load_gltf.rs
emergence_game/src/: main.rs
emergence_lib/: Cargo.toml
emergence_lib/benches/: signal_propagation.rs  signals.rs  water.rs
emergence_lib/examples/: hexx_101.rs
emergence_lib/src/: asset_management.rs  camera.rs  config.rs  cursor.rs  curves.rs  diffusion.rs  entity_map.rs  enum_iter.rs  filtered_array_iter.rs  generation.rs  hive_mind.rs  infovis.rs  interactable.rs  items.rs  lib.rs  litter.rs  manifest.rs  organisms.rs  pathfinding.rs  position.rs  signals.rs  structures.rs  terrain.rs  texture.rs  tilemap.rs  tiles.rs  units.rs  utils.rs
emergence_lib/src/asset_management/: manifest.rs  mod.rs  palette.rs  structures.rs  terrain.rs  ui.rs  units.rs
emergence_lib/src/audio/: mod.rs
emergence_lib/src/construction/: demolition.rs  ghosts.rs  mod.rs  terraform.rs  zoning.rs
emergence_lib/src/crafting/: components.rs  inventories.rs  item_tags.rs  mod.rs  recipe.rs  workers.rs
emergence_lib/src/dev_tools/: mod.rs
emergence_lib/src/geometry/: indexing.rs  meshes.rs  mod.rs  position.rs  rotation.rs  voxels.rs
emergence_lib/src/graphics/: atmosphere.rs  debug.rs  icons.rs  infovis.rs  lighting.rs  litter.rs  mod.rs  organisms.rs  overlay.rs  palette.rs  position.rs  produce.rs  selection.rs  sprite_like.rs  sprites.rs  structures.rs  terrain.rs  tilemap_marker.rs  units.rs  water.rs
emergence_lib/src/items/: count.rs  errors.rs  inventory.rs  item_manifest.rs  mod.rs  recipe.rs  slot.rs
emergence_lib/src/light/: mod.rs  shade.rs
emergence_lib/src/map/: mod.rs
emergence_lib/src/organisms/: activity.rs  drowning.rs  energy.rs  life_cycles.rs  lifecycle.rs  mod.rs  organism_details.rs  oxygen.rs  pathfinding.rs  structures.rs  units.rs  vegetative_reproduction.rs
emergence_lib/src/player_interaction/: abilities.rs  camera.rs  clipboard.rs  cursor.rs  details.rs  hive_mind.rs  intent.rs  mod.rs  organism_details.rs  picking.rs  selection.rs  terraform.rs  tile_selection.rs  zoning.rs
emergence_lib/src/signals/: configs.rs  diffusion.rs  emitters.rs  equation.rs  map_overlay.rs  mod.rs  pheromones.rs  tile_signals.rs
emergence_lib/src/simulation/: generation.rs  geometry.rs  light.rs  map.rs  map_data.rs  mod.rs  pathfinding.rs  rng.rs  time.rs  weather.rs
emergence_lib/src/structures/: commands.rs  construction.rs  crafting.rs  ghost.rs  logistic_buildings.rs  mod.rs  sessile.rs  structure_assets.rs  structure_manifest.rs
emergence_lib/src/terrain/: commands.rs  components.rs  entity_map.rs  generation.rs  litter.rs  marker.rs  mod.rs  terrain_assets.rs  terrain_manifest.rs  terrain_type.rs  terrain_types.rs
emergence_lib/src/tiles/: mod.rs  organisms.rs  position.rs  terrain.rs
emergence_lib/src/ui/: cursor.rs  hover_panel.rs  intent.rs  mod.rs  overlay.rs  production_statistics.rs  select_ability.rs  select_structure.rs  select_terraforming.rs  selection_details.rs  selection_panel.rs  status.rs  ui_assets.rs  wheel_menu.rs
emergence_lib/src/units/: actions.rs  age.rs  basic_needs.rs  behavior.rs  goals.rs  hunger.rs  impatience.rs  item_interaction.rs  mod.rs  movement.rs  reproduction.rs  unit_assets.rs  unit_manifest.rs
emergence_lib/src/utils/: fallible_commands.rs  mod.rs  noise.rs
emergence_lib/src/water/: emitters.rs  (+4 more)
emergence_lib/tests/: serde_manifests.rs  structure_viability.rs  test_setup.rs
emergence_macros/: Cargo.toml
emergence_macros/src/: iterable_enum.rs  lib.rs
tools/debug/: Cargo.toml
tools/debug_tools/: Cargo.toml
(+157 files in other folders)
