[package]
name = "asm-prototype"
version = "0.1.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "e769974d6ac28787a600e3cd56f5543e86401b9b"}
asm-lib = { path = "../asm-lib" }
