[package]
name = "asm-prototype"
version = "0.1.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "43aac1a78480e196f9b8b29339a34d78bc44b663"}
asm-lib = { path = "../asm-lib" }
