[package]
name = "asm-lib"
version = "0.1.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.1.0"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "e769974d6ac28787a600e3cd56f5543e86401b9b"}
itertools = "0.9.0"
rand = "0.7.3"