[package]
name = "emergence_game"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
emergence_lib = { path = "../emergence_lib" }
