[package]
name = "emergence_game"
version = "0.1.0"
# MIT OR Apache-2.0 for source code
# CC0-1.0 for assets
# OFL-1.1 for fonts
license = "(MIT OR Apache-2.0) AND CC0-1.0 AND OFL-1.1"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_framepace = "0.13.0"
emergence_lib = { path = "../emergence_lib", version = "0.1.0" }
