[package]
name = "emergence_lib"
version = "0.1.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# If this feature is enabled, egui will have priority over actions when processing inputs
debug_tools = ['dep:debug_tools']

[dependencies]
bevy = "0.11"
bevy_mod_billboard = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
noisy_bevy = "0.4"
leafwing-input-manager = "0.10"
emergence_macros = { path = "../emergence_macros", version = "0.6" }
indexmap = "1.9"
debug_tools = { path = "../tools/debug_tools", optional = true }
petitset = "0.2"
serde = "1.0"
leafwing_abilities = "0.5.0"
derive_more = "0.99.17"
hexx = { version = "0.7", features = ["ser_de"] }
bevy_mod_raycast = "0.14"
itertools = "0.10.5"
bevy_screen_diagnostics = "0.3"
anyhow = "1.0.69"
serde_json = "1.0.94"
hashbrown = { version = "0.12", features = ["rayon"] }
rayon = "1.7.0"
bevy_framepace = "0.13.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "signals"
harness = false

[[bench]]
name = "water"
harness = false
