[package]
name = "emergence_lib"
version = "0.1.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
emergence_macros = { path = "../emergence_macros", version = "0.6" }
indexmap = "1.9"
petitset = "0.2"
serde = "1.0"
derive_more = "0.99.17"
itertools = "0.10.5"
anyhow = "1.0.69"
serde_json = "1.0.94"
# This must match the version specified in the bevy_utils crate
# See: https://crates.io/crates/bevy_utils/dependencies
hashbrown = { version = "0.14", features = ["rayon"] }
rayon = "1.7.0"

# Bevy deps
bevy = "0.12"
bevy_mod_billboard = { git = "https://github.com/robtfm/bevy_mod_billboard", branch = "bevy12" }
noisy_bevy = "0.5"
leafwing-input-manager = "0.11"
leafwing_abilities = "0.6.0"
hexx = { version = "0.11", features = ["ser_de"] }
bevy_mod_raycast = "0.16"
bevy_screen_diagnostics = "0.4"
bevy_framepace = "0.14.1"
thiserror = "1.0.50"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "signals"
harness = false

[[bench]]
name = "water"
harness = false
