[package]
name = "debug_tools"
version = "0.0.1"
edition = "2021"
description = "Debugging tools for Emergence"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "debug_tools"

[dependencies]
bevy = "0.9.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
# emergence_lib = { path = "../../emergence_lib" }
