[package]
name = "debug_tools"
version = "0.0.2"
authors = ["Lyla <wallamide@gmail.com>"]
edition = "2021"
description = "Debugging tools for Emergence"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "debug_tools"

[dependencies]
bevy = "0.9.1"
bevy_console = { git = "https://github.com/RichoDemus/bevy-console", branch = "main" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
bevy_egui = "0.18.0"
bevy-inspector-egui = "0.14.0"
