[package]
name = "debug_tools"
version = "0.0.2"
authors = ["Lyla <wallamide@gmail.com>"]
edition = "2021"
description = "Debugging tools for Emergence"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "debug_tools"

[dependencies]
bevy = "0.10"
# TODO: see: https://github.com/Leafwing-Studios/Emergence/issues/140
# bevy_console = { git = "https://github.com/RichoDemus/bevy-console", rev = "fa09da33ee752facc8eb3b2ba93682005d179624" } # add bevy 0.9 revision
# bevy_egui = "0.18.0" # TODO add when we use bevy_egui for debug ui
# ALERT: using bevy-inspector-egui > 0.14 might cause issues with bevy_console
bevy-inspector-egui = "0.18"
leafwing-input-manager = "0.9"
